# automated-price-tracking

./: .gitignore  .markdownlint.json  Itineraries.csv  README.md  h.py  pyproject.toml  requirements.txt  streamlit_app.py
.github/workflows/: check_prices.yml
.streamlit/: config.toml
data/: price_history.db
src/: __init__.py  check_prices.py  config.py  main.py  notifications.py  scraper.py  storage.py  test_imports.py  ui.py
src/domain/: models.py
src/infrastructure/database/: __init__.py  models.py  session.py
src/infrastructure/repositories/: base.py  product_repository.py
src/presentation/: app.py
src/presentation/components/: price_chart.py  product_list.py  sidebar.py
src/scripts/: cleanup_db.py
src/services/: notifications.py  price_service.py  product_service.py
src/tests/: conftest.py  test_notification.py  test_price_service.py  test_product_service.py  test_scrape.py
src_old/: models.py  storage.py
